--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "dev": "ts-node src/index.ts",
     "build": "rimraf ./dist && tsc",
     "test": "jest --passWithNoTests",
-    "serve": "node ./index.js"
+    "serve": "node ./index.js",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/jest": "^29.1.1",
     "@types/node": "^18.8.2",
+    "cz-conventional-changelog": "^3.3.0",
+    "husky": "^8.0.3",
     "jest": "^29.1.2",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.0.3",
@@ -22,5 +25,10 @@
   "dependencies": {
     "express": "^4.18.1",
     "helmet": "^6.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
