--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jest": "^29.1.1",
     "@types/node": "^18.8.2",
     "cz-conventional-changelog": "^3.3.0",
+    "git-cz": "^4.9.0",
     "husky": "^8.0.3",
     "jest": "^29.1.2",
     "rimraf": "^3.0.2",
@@ -28,7 +29,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "git-cz"
     }
   }
 }
